@@ -259,11 +259,6 @@ table.tabs-search-table td.search-td {
 
 
 
-
-
-
-
-
 .level-3-raquo {
   padding: 0 5px 0 5px;
 }
